[package]
name = "mqtt-manager"
version = "1.0.0"
authors = ["Trevor R.H. Clarke <trevor.clarke@ballaerospace.com>"]
edition = "2021"
description = "A library to manage MQTT connections in Rust. Based on rumqttc."
license = "MIT/Apache-2.0"
repository = "https://github.com/tclarke/mqtt-manager"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.6.0", registry = "crate-proxy" }
rumqttc = { version = "0.24.0", registry = "crate-proxy", features = ["url"] }
tokio = { version = "1.37.0", registry = "crate-proxy" }
url = { version = "2.5.0", registry = "crate-proxy" }

[dev-dependencies]
tokio = { version = "1.37.0", registry = "crate-proxy", features = ["rt-multi-thread", "signal"] }
